fix missing map

--- a/What_is_happening.html
+++ b/What_is_happening.html
@@ -1255,7 +1255,10 @@
 		</div>
 		<div id="__187">
 			<div id="__186">
-				<img id="___2_ma" src="img/___2_ma.png" srcset="img/___2_ma.png 1x, img/___2_ma@2x.png 2x">
+			<svg style="width:inherit;height:inherit;overflow:visible;">
+				<image id="___2_ma" x="0" y="0" width="100%" height="100%" href="img/___2_ma.png" xlink:href="img/___2_ma.png"></image>
+			</svg>
+				<!-- <img id="___2_ma" src="img/___2_ma.png" srcset="img/___2_ma.png 1x, img/___2_ma@2x.png 2x"> -->
 				<svg class="___225">
 					<ellipse fill="rgba(241,180,215,1)" stroke="rgba(241,180,215,1)" stroke-width="1px" stroke-linejoin="miter" stroke-linecap="butt" stroke-miterlimit="4" shape-rendering="auto" id="___225" rx="10" ry="10" cx="10" cy="10">
 					</ellipse>
