--- a/What_is_happening.html
+++ b/What_is_happening.html
@@ -1256,7 +1256,7 @@
 		<div id="__187">
 			<div id="__186">
 			<svg style="width:inherit;height:inherit;overflow:visible;">
-				<image id="___2_ma" x="0" y="0" width="100%" height="100%" href="img/___2_ma.png" xlink:href="img/___2_ma.png"></image>
+				<image id="map" x="0" y="0" width="100%" height="100%" href="img/map.png" xlink:href="img/map.png"></image>
 			</svg>
 				<!-- <img id="___2_ma" src="img/___2_ma.png" srcset="img/___2_ma.png 1x, img/___2_ma@2x.png 2x"> -->
 				<svg class="___225">
