--- a/What_is_happening.html
+++ b/What_is_happening.html
@@ -72,7 +72,7 @@
 			<h5>COVID-19 is a virus, similar to the flu, but spreads way faster</h5><br>
 		</div>
 		<div id="A_virus_is_a_tiny_piece_of_DNA">
-			<h5>A virus is a tiny piece of DNA that we cannot see. It can attack your body’s cells and replicate itself. </h5><br>
+			<h5>A virus is a tiny strand of RNA wrapped in proteins that we cannot see. The virus can attack your body's cells by entering them with it's proteins and then replicating itself. </h5><br>
 		</div>
 		<div id="What_is_a_virus___">
 			<h5>What is a virus? </h5><br>
@@ -1001,7 +1001,7 @@
 				</svg>
 			</div>
 		<div id="We_tested_over_320_000_cases_e">
-			<h5 style="font-size: 22px">We tested over 320,000 cases early on in only Guangdong, and much more across the rest of the country. <br/><br/>Wuhan, the epicenter of the outbreak, went into complete lockdown where no one was allowed to leave the region by any means.<br/> <br/>We moved 50% of all medical care online to make room for hospitals to de-densify hospitals and to concentrate care. <br/><br/>If someone was tested positive, they would be isolated in the hospital. They limited infection to hospitalization down to two days which was critical to limit the spread.<br/> </h5><br>
+			<h5 style="font-size: 22px">China: We tested over 320,000 cases early on in only Guangdong, and much more across the rest of the country. <br/><br/>Wuhan, the epicenter of the outbreak, went into complete lockdown where no one was allowed to leave the region by any means.<br/> <br/>We moved 50% of all medical care online to make room for hospitals to de-densify hospitals and to concentrate care. <br/><br/>If someone was tested positive, they would be isolated in the hospital. They limited infection to hospitalization down to two days which was critical to limit the spread.<br/> </h5><br>
 		</div>
 		<svg class="___1408" viewBox="0 -180 1000 380">
 			<path fill="rgba(255,247,216,1)" id="___1408" d="M 89 0 L 840 0 L 868.01513671875 -180 L 881.2628173828125 0 L 911 0 C 960.1533203125 0 1000 39.84665298461914 1000 89 L 1000 111 C 1000 160.1533508300781 960.1533203125 200 911 200 L 89 200 C 39.84665298461914 200 0 160.1533508300781 0 111 L 0 89 C 0 39.84665298461914 39.84665298461914 0 89 0 Z">
@@ -1019,7 +1019,7 @@
 			</path>
 		</svg>
 		<div id="Most_public_schools_have_been_">
-			<h5 style="font-size: 24px">Most public schools have been closed in all states.<br/>Most private college campuses have been closed as well; all college classes have moved online. <br/>Restaurants have been closed, but takeout can still be ordered. <br/>Sporting events, including March Madness and Olympics, were either cancelled or postponed. <br/>Concert tours have been called off or postponed. <br/>Most states have called for a “shelter-in-place”</h5><br>
+			<h5 style="font-size: 24px">The United States: Most public schools have been closed in all states.<br/>Most private college campuses have been closed as well; all college classes have moved online. <br/>Restaurants have been closed, but takeout can still be ordered. <br/>Sporting events, including March Madness and Olympics, were either cancelled or postponed. <br/>Concert tours have been called off or postponed. <br/>Most states have called for a “shelter-in-place”</h5><br>
 		</div>
 		<div id="Convention_Centers_are_being_t">
 			<h5 style="font-size: 24px">Convention Centers are being turned into makeshift medical centers. <br/>Hospital Ships are housing patients offshore<br/>Some states are screening people with out-of-state license plates.</h5><br>
