Added Mailto functionality

--- a/index.html
+++ b/index.html
@@ -430,13 +430,15 @@
 			</rect>
 		</svg>
 		<div id="submit_button">
-			<svg class="submit_button">
-				<rect fill="rgba(255,190,190,1)" stroke="rgba(112,112,112,0)" stroke-width="1px" stroke-linejoin="miter" stroke-linecap="butt" stroke-miterlimit="4" shape-rendering="auto" id="submit_button" rx="30" ry="30" x="0" y="0" width="150" height="60">
-				</rect>
-			</svg>
-			<div id="button-text">
-				<h5 style="font-weight: 400">Submit</h5>
-			</div>
+			<a href="mailto:covidcheatsheet@gmail.com?subject = WebsiteQuestions&body = Message">
+				<svg class="submit_button">
+					<rect fill="rgba(255,190,190,1)" stroke="rgba(112,112,112,0)" stroke-width="1px" stroke-linejoin="miter" stroke-linecap="butt" stroke-miterlimit="4" shape-rendering="auto" id="submit_button" rx="30" ry="30" x="0" y="0" width="150" height="60">
+					</rect>
+				</svg>
+				<div id="button-text">
+					<h5 style="font-weight: 400">Email Us!</h5>
+				</div>
+			</a>
 		</div>
 		<div id="I_Have_More_Questions">
 			<h2>I Have More Questions</h2>
@@ -444,10 +446,6 @@
 		<div id="Don_t_hesitate_to_ask_">
 			<h4>Don’t hesitate to ask!</h4>
 		</div>
-		<svg class="textbox">
-			<rect fill="rgba(255,255,255,1)" stroke="rgba(112,112,112,0)" stroke-width="1px" stroke-linejoin="miter" stroke-linecap="butt" stroke-miterlimit="4" shape-rendering="auto" id="___70" rx="30" ry="30" x="0" y="0" width="700" height="60">
-					</rect>
-		</svg>
 		<div id="chat_button">
 			<svg class="chat_button">
 				<rect fill="rgba(255,190,190,1)" stroke="rgba(112,112,112,0)" stroke-width="1px" stroke-linejoin="miter" stroke-linecap="butt" stroke-miterlimit="4" shape-rendering="auto" id="chat_button" rx="42" ry="42" x="0" y="0" width="440" height="80">
