Linked Johns Hopkins Map

--- a/What_Can_I_do.html
+++ b/What_Can_I_do.html
@@ -1296,6 +1296,7 @@
 			<h5>Accurate live maps, graphs, and numbers:</h5><br>
 		</div>
 		<div id="___2___7" class="___2___7">
+			<a href="https://coronavirus.jhu.edu/map.html">
 			<svg class="___25_mt">
 				<rect fill="rgba(255,255,255,1)" stroke="rgba(112,112,112,0)" stroke-width="1px" stroke-linejoin="miter" stroke-linecap="butt" stroke-miterlimit="4" shape-rendering="auto" id="___25_mt" rx="29.5" ry="29.5" x="0" y="0" width="497" height="59">
 				</rect>
@@ -1303,6 +1304,7 @@
 			<div id="Johns_Hopkins_Coronavirus_Reso">
 				<h5 style="font-size: 20px">Johns Hopkins Coronavirus Resource Center</h5>
 			</div>
+			</a>
 		</div>
 		<div id="Most_recent_research_on_the_vi">
 			<h5>Most recent research on the virus:</h5>
