--- a/index.html
+++ b/index.html
@@ -112,6 +112,30 @@
 		</a>
 	</div>
 	</div>
+	<div id='lifeomic-block'>
+		<h3 style="position: absolute; left: 40px; top: 40px;">Or, see if they are answered here by</h3>
+		<img style="position: absolute; left: 740px; width: 400px;" src="img/LO-id-color.png">
+
+		<a href="http://lifeapps.io/lifeology/covid-19">
+			<button class="lifeology-button" style="position: absolute; left: 60px;">
+				<h5>What do I need to know about COVID-19?</br>(In 12-languages)</h5>
+				<img src="img/lifeology-12.png" style="width: 250px;">
+			</button>
+		</a>
+		<a href="https://lifeology.us.lifeomic.com/static/ologies/healthcare/covid-19-comic/index.html#/">
+			<button class="lifeology-button" style="position: absolute; left: 460px;">
+				<h5>How to keep COVID away! <br> (For kids!)</h5>
+				<img src="img/lifeology-kids.png" style="width: 250px;">
+			</button>
+		</a>
+		<a href="https://lifeology.io/">
+			<button class="lifeology-button" style="position: absolute; left: 880px;">
+				
+				<h5>Learn more about Lifeology and explore more courses</h5>
+				<img src="img/lifeology-logo.png" style="width: 250px;">
+			</button>
+		</a>
+	</div>
 	<div id="about_block">
 		<h3>About The Project</h3>
 		<p style="margin-top: 20px;">This website is created by Yao Yin and Daniela Shuman.</p>
