more lifeology sections

--- a/What_is_happening.html
+++ b/What_is_happening.html
@@ -8,20 +8,18 @@
 <link rel="stylesheet" type="text/css" id="applicationStylesheet" href="What_is_happening.css"/>
 <link rel="stylesheet" type="text/css" id="applicationStylesheet" href="global.css"/>
 
-<script id="applicationScript" type="text/javascript" src="What_is_happening.js"></script>
+<script id="applicationScript" type="text/javascript" src="server.js"></script>
 <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;500&display=swap" rel="stylesheet">
 </head>
 <body>
 <div id="What_is_happening">
+	<a href="index.html"><img id='home-button-top' src="img/home-button.svg"></a>
+	<a href="index.html"><img id='home-button-bottom' src="img/home-button.svg"></a>
 	<div id="What_is_Happening_">
 		<h1 style="font-weight: 300">What is Happening?</h1>
 	</div>
-	<a href="index.html" id="home-button-top">
-		<img src="img/home-button.svg">
-	</a>
 
 	<div id="virus_block">
-
 		<svg class="___89">
 			<rect fill="rgba(255,255,255,1)" stroke="rgba(112,112,112,0)" stroke-width="1px" stroke-linejoin="bevel" stroke-linecap="butt" stroke-miterlimit="4" shape-rendering="auto" id="___89" rx="100" ry="100" x="0" y="0" width="1120" height="200">
 			</rect>
@@ -91,6 +89,32 @@
 		<img id="ID013_cough" src="img/013-cough.svg">
 		<img id="ID048_air" src="img/048-air.svg">
 	</div>
+
+	<div id='lifeomic-block'>
+		<h4 style="position: absolute; left: 40px; top: 40px;">Or, see if they are Checkout these selected articles to learn more:</h4>
+
+		<a href="https://lifeapps.io/disease/coronaviruses-and-beyond-how-they-work-how-to-protect-yourself/">
+			<button class="lifeology-button" style="position: absolute; left: 60px;">
+				<h5 style="width: 260px; margin-left: 30px">Coronavirus and Beyond: How They Work, How To Protect Yourself</h5>
+				<img src="img/008-coronavirus.svg" style="width: 250px;">
+			</button>
+		</a>
+		<a href="https://lifeapps.io/research/how-social-distancing-stops-the-spread-of-covid-19/">
+			<button class="lifeology-button" style="position: absolute; left: 460px;">
+				<h5 style="width: 260px; margin-left: 30px">Keep viruses OUT by learning how scientists keep them IN the lab.
+</h5>
+				<img src="img/virus-in-lab.gif" style="width: 250px;">
+			</button>
+		</a>
+		<a href="https://lifeology.io/">
+			<button class="lifeology-button" style="position: absolute; left: 880px;">
+				
+				<h5 style="width: 260px; margin-left: 30px">Learn more about Lifeology and explore more courses</h5>
+				<img src="img/lifeology-logo.png" style="width: 250px;">
+			</button>
+		</a>
+	</div>
+
 	<div id="response_block">
 		<svg class="___97">
 			<rect fill="rgba(148,155,240,1)" stroke="rgba(112,112,112,1)" stroke-width="1px" stroke-linejoin="miter" stroke-linecap="butt" stroke-miterlimit="4" shape-rendering="auto" id="___97" rx="0" ry="0" x="0" y="0" width="1280" height="1620">
@@ -132,8 +156,8 @@
 		</div>
 	</div>
 	<div id="history_block" style="background-color: rgba(234,93,93,1)">
-			<img id="brief-history" src="img/question-mark.svg"></img>
-			<h2 id="Brief_History_of_COVID_19" style="color: white">Brief History of COVID-19</h2>
+		<img id="brief-history" src="img/question-mark.svg"></img>
+		<h2 id="Brief_History_of_COVID_19" style="color: white">Brief History of COVID-19</h2>
 		<img id="timeline" src="img/timeline.svg">
 		<div id="Spread_of_the_Virus">
 			<h3 style="color: white">Spread of the Virus</h3>
@@ -166,6 +190,5 @@
 			<p>The United States Federal Reserve in response to the growing economic fallout of the COV-19 epidemic slashed federal interest rates by 1% to a range of 0 to 0.25% interest rates to help inject money into the economy and promote lending. <br/><br/>The Fed also announced plans to purchase $500 billion dollars worth of Treasury Securities and $200 billion dollars worth of mortgage-backed debt to help inject money directly into the economy. <br/><br/>The Dow Jones Industrial has plunged over 25% in value over the last month following record highs at the end of February. This downturn was worse than the stock market drop following the great depression and has erased most of the gains since Donald Trump has become president. <br/></p><br>
 		</div>
 	</div>
-</div>
 </body>
 </html>
