--- a/Quiz.html
+++ b/Quiz.html
@@ -9,7 +9,7 @@
 <link rel="stylesheet" type="text/css" id="applicationStylesheet" href="global.css"/>
 <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@500&display=swap" rel="stylesheet">
 
-<script id="applicationScript" type="text/javascript" src="Quiz.js"></script>
+<script id="applicationScript" type="text/javascript" src="server.js"></script>
 </head>
 <body>
 <div id="Quiz">
