--- a/Wash_Hands.html
+++ b/Wash_Hands.html
@@ -8,7 +8,7 @@
 <link rel="stylesheet" type="text/css" id="applicationStylesheet" href="Wash_Hands.css"/>
 <link rel="stylesheet" type="text/css" id="applicationStylesheet" href="global.css"/>
 
-<script id="applicationScript" type="text/javascript" src="Wash_Hands.js"></script>
+<script id="applicationScript" type="text/javascript" src="server.js"></script>
 <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@500&display=swap" rel="stylesheet">
 
 </head>
