--- a/about.html
+++ b/about.html
@@ -7,6 +7,7 @@
 <title>Landing</title>
 <link rel="stylesheet" type="text/css" id="applicationStylesheet" href="global.css"/>
 
+
 <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;500&display=swap" rel="stylesheet">
 
 <script id="applicationScript" type="text/javascript" src="server.js"></script>
@@ -14,23 +15,13 @@
 </head>
 <body>
 	<style type="text/css">
+
 		.mediaViewInfo {
 			--web-view-name: About;
 			--web-view-id: About;
-			--web-scale-to-fit: true;
-			--web-scale-to-fit-type: width;
-			--web-scale-on-resize: true;
-			--web-enable-deep-linking: true;
 		}
 		:root {
 			--web-view-ids: About;
-		}
-		* {
-			margin: 0;
-			padding: 0;
-			box-sizing: border-box;
-			border: none;
-			scroll-behavior: smooth;
 		}
 		#About {
 			position: absolute;
@@ -243,3 +234,6 @@
 
 
 </body>
+
+</html>
+
