--- a/creative-projects.html
+++ b/creative-projects.html
@@ -13,21 +13,21 @@
 </head>
 <style type="text/css">
 	.mediaViewInfo {
-			--web-view-name: creative-projects;
-			--web-view-id: creative-projects;
+			--web-view-name: Creative-Projects;
+			--web-view-id: Creative-Projects;
 		}	
 	:root {
-		--web-view-ids: creative-projects;
+		--web-view-ids: Creative-Projects;
 	}
 
-	#creative-projects {
+	#Creative-Projects {
 		position: absolute;
 		transform: translateX(-50%);
 		left: 50%;
 		width: 1280px;
 		height: 1583px;
-		--web-view-name: creative-projects;
-		--web-view-id: creative-projects;
+		--web-view-name: Creative-Projects;
+		--web-view-id: Creative-Projects;
 		--web-scale-to-fit: true;
 		--web-scale-to-fit-type: width;
 		--web-scale-on-resize: true;
@@ -94,7 +94,7 @@
 
 </style>
 <body>
-<div id="creative-projects">
+<div id="Creative-Projects">
 	<a href="index.html"><img id='home-button-top' src="img/home-button.svg"></a>
 	<a href="index.html"><img id='home-button-bottom-2' src="img/home-button.svg"></a>
 	<a href="What_Can_I_do.html"><img id='back-arrow-top' src="img/back-arrow.svg"></a>
