--- a/What_Can_I_do.html
+++ b/What_Can_I_do.html
@@ -36,7 +36,7 @@
 			<button></button>
 			<h4>Excercise</h4>
 			<p>Do yoga, stretch, or go for a walk/jog where there are not many people around!</p>
-			<a href="excercise.html">
+			<a href="exercise.html">
 				<img class="elements pink-small-button" src="img/pink-small-button.svg">
 			</a>
 		</div>
@@ -68,12 +68,12 @@
 				<img class="elements pink-small-button" src="img/pink-small-button.svg">
 			</a>
 		</div>
-		<div class="elements" id='connect-online'>
+		<div class="elements" id='connect'>
 			<img src="img/video-conference.svg">
 			<button></button>
-			<h4>Connect Online</h4>
+			<h4>Connect</h4>
 			<p>It might be hard not seeing your friends, but you can always try these new ways of personal connection.</p>
-			<a href="connect-online.html">
+			<a href="connect.html">
 				<img class="elements pink-small-button" src="img/pink-small-button.svg">
 			</a>
 		</div>
