--- a/index.html
+++ b/index.html
@@ -89,10 +89,10 @@
 		<a id="self" href="What_Can_I_do.html">
 			<button class="white-button-large"><h5>Take Care of Yourself</h5></button>
 		</a>
-		<a id="others" href="What_Can_I_do.html#others_block">
+		<a id="others" href="What_Can_I_do.html#family-block">
 			<button class="white-button-large"><h5>Take Care of Others</h5></button>
 		</a>
-		<a id="world" href="What_Can_I_do.html#world_block">
+		<a id="world" href="What_Can_I_do.html#world-block">
 			<button class="white-button-large"><h5>Stay Curious and Informed</h5></button>
 		</a>
 
