fixing alignments and graphs

--- a/What_is_happening.html
+++ b/What_is_happening.html
@@ -131,25 +131,27 @@
 		<img id="china-flag" src="img/china-flag.svg">
 		<img id="us-flag" src="img/us-flag.svg">
 		<div id="We_tested_over_320_000_cases_e">
-			<h5 style="font-size: 22px">China: We tested over 320,000 cases early on in only Guangdong, and much more across the rest of the country. <br/><br/>Wuhan, the epicenter of the outbreak, went into complete lockdown where no one was allowed to leave the region by any means.<br/> <br/>We moved 50% of all medical care online to make room for hospitals to de-densify hospitals and to concentrate care. <br/><br/>If someone was tested positive, they would be isolated in the hospital. They limited infection to hospitalization down to two days which was critical to limit the spread.<br/> </h5><br>
+			<h5 style="font-size: 22px">We tested over 320,000 cases early on in only Guangdong, and much more across the rest of the country. <br/><br/>Wuhan, the epicenter of the outbreak, went into complete lockdown where no one was allowed to leave the region by any means.<br/> <br/>We moved 50% of all medical care online to make room for hospitals to de-densify hospitals and to concentrate care. <br/><br/>If someone was tested positive, they would be isolated in the hospital. They limited infection to hospitalization down to two days which was critical to limit the spread.<br/> </h5><br>
 		</div>
 		<svg class="___1408" viewBox="0 -180 1000 380">
 			<path fill="rgba(255,247,216,1)" id="___1408" d="M 89 0 L 840 0 L 868.01513671875 -180 L 881.2628173828125 0 L 911 0 C 960.1533203125 0 1000 39.84665298461914 1000 89 L 1000 111 C 1000 160.1533508300781 960.1533203125 200 911 200 L 89 200 C 39.84665298461914 200 0 160.1533508300781 0 111 L 0 89 C 0 39.84665298461914 39.84665298461914 0 89 0 Z">
 			</path>
 		</svg>
 		<div id="All_testing_was_free__Over_40_">
-			<h5>All testing was free!<br/>Over 40,000 medical professionals were sent to Wuhan to help the epicenter. <br/>15 million people in Wuhan ordered food online and had it delivered. <br/>Schools across the country closed, but classes were still held online. </h5><br>
+			<h5 style="font-size: 24px">All testing was free!<br/>Over 40,000 medical professionals were sent to Wuhan to help the epicenter. <br/>15 million people in Wuhan ordered food online and had it delivered. <br/>Schools across the country closed, but classes were still held online. </h5><br>
 		</div>
 		<svg class="___1409" viewBox="-60 0 920 320">
 			<path fill="rgba(255,247,216,1)" id="___1409" d="M 89 0 L 771 0 C 820.1533203125 0 860 39.84665298461914 860 89 L 860 231 C 860 280.1533508300781 820.1533203125 320 771 320 L 89 320 C 45.69628143310547 320 9.615932464599609 289.0731201171875 1.58331298828125 247.7999572753906 C 0.5643420219421387 242.5674591064453 0 236.8496398925781 0 231 L -60 254.5498046875 L 0 201.8836364746094 L 0 89 C 0 39.84665298461914 39.84665298461914 0 89 0 Z">
 			</path>
 		</svg>
-		<svg class="___1410" viewBox="0 -48.298 860 228.298">
-			<path fill="rgba(255,247,216,1)" id="___1410" d="M 89 0 L 162.7579650878906 0 L 180 -48.2978515625 L 203.2632751464844 0 L 771 0 C 820.1533203125 0 860 39.84665298461914 860 89 L 860 91 C 860 140.1533508300781 820.1533203125 180 771 180 L 89 180 C 39.84665298461914 180 0 140.1533508300781 0 91 L 0 89 C 0 39.84665298461914 39.84665298461914 0 89 0 Z">
+		<svg class="___1410" viewBox="0 -48.298 940 228.298">
+			<path fill="rgba(255,247,216,1)" id="___1410" d="M 97.27906799316406 0 L 177.8982543945312 0 L 196.7441864013672 -48.2978515625 L 222.1714935302734 0 L 842.720947265625 0 C 896.4466552734375 0 940 39.84665298461914 940 89 L 940 91 C 940 140.1533508300781 896.4466552734375 180 842.720947265625 180 L 97.27906799316406 180 C 43.55331802368164 180 0 140.1533508300781 0 91 L 0 89 C 0 39.84665298461914 43.55331802368164 0 97.27906799316406 0 Z">
 			</path>
 		</svg>
+
+
 		<div id="Most_public_schools_have_been_">
-			<h5 style="font-size: 24px">The United States: Most public schools have been closed in all states.<br/>Most private college campuses have been closed as well; all college classes have moved online. <br/>Restaurants have been closed, but takeout can still be ordered. <br/>Sporting events, including March Madness and Olympics, were either cancelled or postponed. <br/>Concert tours have been called off or postponed. <br/>Most states have called for a “shelter-in-place”</h5><br>
+			<h5 style="font-size: 24px; text-align: left;">Most public schools have been closed in all states.<br/>Most private college campuses have been closed as well; all college classes have moved online. <br/>Restaurants have been closed, but takeout can still be ordered. <br/>Sporting events, including March Madness and Olympics, were either cancelled or postponed. <br/>Concert tours have been called off or postponed. <br/>Most states have called for a “shelter-in-place”</h5><br>
 		</div>
 		<div id="Convention_Centers_are_being_t">
 			<h5 style="font-size: 24px">Convention Centers are being turned into makeshift medical centers. <br/>Hospital Ships are housing patients offshore<br/>Some states are screening people with out-of-state license plates.</h5><br>
