Typos and Bug fixes

--- a/What_Can_I_do.html
+++ b/What_Can_I_do.html
@@ -52,7 +52,7 @@
 		<div class="elements" id='creative-projects'>
 			<img src="img/008-creativity.svg">
 			<button></button>
-			<h4>Creativce Projects</h4>
+			<h4>Creative Projects</h4>
 			<p>Learn something new, or do something you have always wanted to do!</p>
 			<a href="creative-projects.html">
 				<img class="elements pink-small-button" src="img/pink-small-button.svg">
