--- a/What_is_happening.html
+++ b/What_is_happening.html
@@ -91,7 +91,7 @@
 	</div>
 
 	<div id='lifeomic-block'>
-		<h4 style="position: absolute; left: 40px; top: 40px;">Or, see if they are Checkout these selected articles to learn more:</h4>
+		<h4 style="position: absolute; left: 40px; top: 40px;">Checkout these selected articles to learn more:</h4>
 
 		<a href="https://lifeapps.io/disease/coronaviruses-and-beyond-how-they-work-how-to-protect-yourself/">
 			<button class="lifeology-button" style="position: absolute; left: 60px;">
