Added Paloma plugin code

--- a/Wash_Hands.html
+++ b/Wash_Hands.html
@@ -102,7 +102,7 @@
 			<h3>You just…</h3>
 		</div>
 		<div id="Before_and_after_caring_for_so">
-			<h4>Before and after caring for someone at home who is sick with vomiting or diarrhea<br/></h4><br>
+			<h4>Before and after caring for someone at home who is sick<br/></h4><br>
 		</div>
 		<div id="Went_to_the_public">
 			<h4>Went to the public</h4>
