--- a/What_Can_I_do.html
+++ b/What_Can_I_do.html
@@ -34,7 +34,7 @@
 		<div class="elements" id='excercise'>
 			<img src="img/excercise.svg">
 			<button></button>
-			<h4>Excercise</h4>
+			<h4>Exercise</h4>
 			<p>Do yoga, stretch, or go for a walk/jog where there are not many people around!</p>
 			<a href="exercise.html">
 				<img class="elements pink-small-button" src="img/pink-small-button.svg">
