--- a/What_is_happening.html
+++ b/What_is_happening.html
@@ -138,7 +138,7 @@
 			</path>
 		</svg>
 		<div id="All_testing_was_free__Over_40_">
-			<h5 style="font-size: 24px">All testing was free!<br/>Over 40,000 medical professionals were sent to Wuhan to help the epicenter. <br/>15 million people in Wuhan ordered food online and had it delivered. <br/>Schools across the country closed, but classes were still held online. </h5><br>
+			<h5 style="font-size: 24px">All testing is free!<br/>Over 40,000 medical professionals were sent to Wuhan to help the epicenter. <br/>15 million people in Wuhan ordered food online and had it delivered. <br/>Schools across the country closed, but classes were still held online. </h5><br>
 		</div>
 		<svg class="___1409" viewBox="-60 0 920 320">
 			<path fill="rgba(255,247,216,1)" id="___1409" d="M 89 0 L 771 0 C 820.1533203125 0 860 39.84665298461914 860 89 L 860 231 C 860 280.1533508300781 820.1533203125 320 771 320 L 89 320 C 45.69628143310547 320 9.615932464599609 289.0731201171875 1.58331298828125 247.7999572753906 C 0.5643420219421387 242.5674591064453 0 236.8496398925781 0 231 L -60 254.5498046875 L 0 201.8836364746094 L 0 89 C 0 39.84665298461914 39.84665298461914 0 89 0 Z">
@@ -178,7 +178,7 @@
 		</svg>
 		<img id="economy-icon" src="img/economy.svg">
 		<div id="What_Happened_to_the_Economy_">
-			<h2>What Happened to the Economy?</h2>
+			<h2>What Is Happening to the Economy?</h2>
 		</div>
 		<div id="Unfortunately__because_people_">
 			<h5>Unfortunately, because people can’t go to work as well, the country’s productivity has gone down significantly. This has led to significant drops in the stock market. This means that people are losing money, on top of this global pandemic. <br/><br/>This drop in the economy has been the worst drop in the stock market following the Great Depression in the 1930s. <br/><br/>And along with this, people are also losing jobs as companies can’t afford to pay their workers any longer. Unemployment claims have increased by 3 million just last week. <br/><br/>In order to help people losing money and jobs, the US has also given over $200 billion dollars worth of housing debt back to the people so they can use that money for other necessities. <br/><br/>If your family has been affected, be aware that the adults in the household might be stressed. Help out as much as you can around the house, take responsibilities, we will get through this together.</h5><br>
