Fixed Chat button spacing

--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
 			<button class="pink-button-large" style="margin: 20px;"><h4 style="font-weight: 400">Email Us!</h4></button>
 		</a>
 		<a>
-		<button class="pink-button-large" style="margin: 20px;"><h4 style="font-weight: 400">Hit the Messenger Button to Ask an Expert</h4></button>
+		<button class="pink-button-large" style="margin: 10px;"><h4 style="font-weight: 400">Ask an Expert with Messenger!</h4></button>
 		</a>
 	</div>
 	</div>
