--- a/creative-projects.html
+++ b/creative-projects.html
@@ -197,7 +197,7 @@
 			</h5>
 			</a>
 
-			<a class="grid-element" href=" ">
+			<a class="grid-element" href="https://www.education.com/worksheets/ela/">
 			<svg class="content-bubble">
 				<rect fill="rgba(255,255,255,0.902)" id="___142" rx="73" ry="73" x="0" y="0" width="580" height="160">
 				</rect>
@@ -219,7 +219,7 @@
 			</h5>
 			</a>
 
-			<a class="grid-element" href=" ">
+			<a class="grid-element" href="https://www.khanacademy.org/">
 			<svg class="content-bubble">
 				<rect fill="rgba(255,255,255,0.902)" id="___142" rx="73" ry="73" x="0" y="0" width="580" height="160">
 				</rect>
@@ -230,7 +230,7 @@
 			</h5>
 			</a>
 
-			<a class="grid-element" href=" ">
+			<a class="grid-element" href="https://tinkerlab.com/march-art-challenge/">
 			<svg class="content-bubble">
 				<rect fill="rgba(255,255,255,0.902)" id="___142" rx="73" ry="73" x="0" y="0" width="580" height="160">
 				</rect>
@@ -241,7 +241,7 @@
 			</h5>
 			</a>
 
-			<a class="grid-element" href=" ">
+			<a class="grid-element" href="https://tinkerlab.com/easy-stop-motion-animation-kids/">
 			<svg class="content-bubble">
 				<rect fill="rgba(255,255,255,0.902)" id="___142" rx="73" ry="73" x="0" y="0" width="580" height="160">
 				</rect>
@@ -252,7 +252,7 @@
 			</h5>
 			</a>
 
-			<a class="grid-element" href=" ">
+			<a class="grid-element" href="https://www.digipuzzle.net/main/kids/">
 			<svg class="content-bubble">
 				<rect fill="rgba(255,255,255,0.902)" id="___142" rx="73" ry="73" x="0" y="0" width="580" height="160">
 				</rect>
