--- a/Quiz.html
+++ b/Quiz.html
@@ -963,7 +963,7 @@
 			</svg>
 		</div>
 		<div id="Talk_to_an_expert_">
-			<h5>Talk to an expert!</h5>
+			<h5>Hit the Messenger button to Ask an Expert!</h5>
 		</div>
 		<div id="I_am_Angry">
 			<h2>I am Angry</h2>
@@ -1198,9 +1198,11 @@
 				</svg>
 			</div>
 		</div>
+		<a class="grid-element" href="http://www.covidcheatsheet.org/creative-projects.html"></a>
 		<div id="Checkout_more_ideas_and_resour">
 			<h5>Checkout more ideas and resources</h5>
 		</div>
+	</a>
 		<div id="Learn_how_to_draw_paint">
 			<h5>Learn how to draw/paint</h5>
 		</div>
