--- a/about.html
+++ b/about.html
@@ -227,6 +227,8 @@
 		<ul>Paige Jarreau, Justin Helmig & Matt Lavin from Lifeology & LifeOmic: For collaborating with us from the start and introducing us to so many supportive, like-minded people.</ul>
 
 		<ul>Kelsey Hunter & Daniel Regis from Paloma: for helping us tremendously with the chat platform and being so generous with their time and resources</ul>
+
+		<ul>Jelena Draigicevic: for translating our pages into Serbian so we can bring this information to the Balkans!</ul>
 	</div>
 	</div>
 	<div id="footer"></div>
