--- a/index.html
+++ b/index.html
@@ -166,6 +166,7 @@
 		<h3>About The Project</h3>
 		<p style="margin-top: 20px;">This website is created by Yao Yin and Daniela Shuman.</p>
 		<p style="margin-top: 20px;">Many thanks to those who provided the help and resources that made it possible.</p><br>
+		<p style="margin-top: 20px;">This website was translated by Jelena Draigicevic to Serbian.</p><br>
 		<div id="about_us_button">
 			<a href="about.html"><button class="white-button-small"><p>More About the Project</p></button>
 		</div>
