--- a/What_is_happening.html
+++ b/What_is_happening.html
@@ -185,7 +185,7 @@
 	<div id="history_block" style="background-color: rgba(234,93,93,1)">
 		<img id="brief-history" src="img/question-mark.svg"></img>
 		<h2 id="Brief_History_of_COVID_19" style="color: white">Brief History of COVID-19</h2>
-		<img id="timeline" src="img/timeline.svg">
+		<img id="timeline" src="img/timeline_.svg">
 		<div id="Spread_of_the_Virus">
 			<h3 style="color: white">Spread of the Virus</h3>
 		</div>
