--- a/about.html
+++ b/about.html
@@ -109,9 +109,9 @@
 
 		.chat-bubble-2 h5 {
 			position: absolute;
+			font-size: 22px;
 			padding: 20px;
 			width: 860px;
-			height: 120px;
 			top: 20px;
 			left: 200px;
 		}
@@ -222,13 +222,12 @@
 	</div>
 
 	<div class="thank-you-s">
-		<ul>Pandemic Response Hackathon: For sparking the idea and connecting us with amazing people.<ul>
+		<ul><b>Pandemic Response Hackathon:</b> For sparking the idea and connecting us with amazing people.<ul>
 
-		<ul>Paige Jarreau, Justin Helmig & Matt Lavin from Lifeology & LifeOmic: For collaborating with us from the start and introducing us to so many supportive, like-minded people.</ul>
+		<ul><b>Jarreau, Justin Helmig & Matt Lavin from Lifeology & LifeOmic:</b> For collaborating with us from the start and introducing us to so many supportive, like-minded people.</ul>
 
-		<ul>Kelsey Hunter & Daniel Regis from Paloma: for helping us tremendously with the chat platform and being so generous with their time and resources</ul>
-
-		<ul>Jelena Draigicevic: for translating our pages into Serbian so we can bring this information to the Balkans!</ul>
+		<ul><b>Kelsey Hunter & Daniel Regis from Paloma:</b> for helping us tremendously with the chat platform and being so generous with their time and resources</ul>
+		<ul><b>Jelena Draigicevic:</b> for translating our pages into Serbian so we can bring this information to the Balkans!</ul>
 	</div>
 	</div>
 	<div id="footer"></div>
